--- a/package.json
+++ b/package.json
@@ -2,17 +2,19 @@
   "name": "music-manager",
   "version": "0.1.0",
   "private": true,
+  "sideEffects": false,
   "scripts": {
     "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
     "test": "vitest",
-    "test:ui": "npx playwright test --ui"
+    "test:ui": "npx playwright test --ui",
+    "analyze": "next build"
   },
   "dependencies": {
-    "@mobily/ts-belt": "^3.13.1",
     "@hookform/resolvers": "^5.0.1",
+    "@mobily/ts-belt": "^3.13.1",
     "@reduxjs/toolkit": "^2.7.0",
     "framer-motion": "^12.7.4",
     "neverthrow": "^8.2.0",
@@ -27,6 +29,7 @@
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
+    "@next/bundle-analyzer": "^15.3.4",
     "@playwright/test": "^1.53.1",
     "@tailwindcss/postcss": "^4",
     "@testing-library/react": "^16.3.0",
